<resources>
    <string name="app_name">Bookstore</string>
    <string name="book_image_description">book image</string>
    <string name="absent">absent</string>
    <string name="add_to_cart">Add</string>
    <string name="common_error_msg">Something went wrong. </string>
    <string name="book_list_mvvm">Book list MVVM</string>
    <string name="book_list_mvp">Book list MVP</string>
    <string name="book_list_mvvm_fragment">Book list MVVM Fragment</string>
    <string name="book_list_mvp_fragment">Book list MVP Fragment</string>
    <string name="activities_menu_group">Activities</string>
</resources>
